# traps_sweeper

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindFreetype.cmake  FindGLEW.cmake  FindSDL2.cmake  FindSDL2_TTF.cmake  FindSDL2_image.cmake  update_directory.cmake
src/: basic_types.h  string_type.h
src/demo/perf_test/: everything.h
src/demo/trap_sweeper/: image_hider.h  mine_sweeper.h
src/engine/collections/: bit_set.h  fixed_vector.h  flat_map.h  handle_map_stable.h  segments_list.h  sorted_vector.h
src/engine/collections/memory/: mem_allocator.cpp  mem_allocator.h  raw_buffer.h
src/engine/collections/non_owning/: handle_allocator.cpp  handle_allocator.h
src/engine/ecs/: ecs.h
src/engine/environ/: conversions.cpp  conversions.h  loader.cpp  loader.h  sdl_environ.h
src/engine/environ/sdl/: cursor.cpp  cursor.h  env_events.cpp  env_events.h  keyboard.cpp  keyboard.h  main_loop.cpp  main_loop.h  window.cpp  window.h
src/engine/gui/: gui.h  simple_button.h  simple_renderables.h
src/engine/gui/base_components/: button.cpp  button.h  callbacks.cpp  callbacks.h  frame.cpp  frame.h  intrusive_handle.h  renderable.h  tests.h
src/engine/matrix/: mat4.cpp  mat4.h  quat.cpp  quat.h  vec3.cpp  vec3.h
src/engine/matrix/impl/: matrix_base.cpp  matrix_base.h
src/engine/render/api/: draw.cpp  draw.h  upload.cpp  upload.h
src/engine/render/chunk/: attr_chunk.cpp  attr_chunk.h  layout.cpp  layout.h
src/engine/render/chunk/impl/: chunk_mem.h  gpu_buffers.h
src/engine/render/ctx/: render_context.cpp  render_context.h
src/engine/render/ctx/impl/: mnged_res.h
src/engine/render/material/: material.cpp  material.h  material_inst.h  shader_fac.cpp  shader_fac.h  shader_gen.cpp  shader_gen.h  shader_node.cpp  shader_node.h  usage_defines.h
src/engine/render/mesh/: mesh_gen.h  single_mesh.cpp  single_mesh.h
src/engine/render/misc/: color.h  fps_counter.h
src/engine/render/model/: draw_batch.cpp  draw_batch.h  mat_texture.cpp  mat_texture.h  model.cpp  model.h  transforms.h
src/engine/render/model/impl/: buffered_data_texture.h  data_texture.h
src/engine/render/opengl/: error_handling.cpp  error_handling.h  gl_buffer.cpp  gl_buffer.h  gl_shader.cpp  gl_shader.h  gl_texture.cpp  gl_texture.h
src/engine/render/opengl/defines/: gl_type_enums.cpp  gl_type_enums.h  gl_types.cpp  gl_types.h
src/engine/render/scene/: camera.cpp  camera.h
src/engine/render/text/: font.cpp_depr  font.h_depr  freetype_font.cpp  freetype_font.h  glyph.h  glyph_texture_sheet.cpp  glyph_texture_sheet.h  text_sprite.cpp  text_sprite.h  utf.h
src/engine/render/texture/: image_data.h  packer.h  texture.cpp  texture.h
src/engine/utils/: console.cpp  console.h  math.h  string.cpp  string.h
src/engine/utils/compile_time/: compile_time.h  type_list.h
src/ext/: functional.h  math.cpp  math.h  optional.h  random.h  variant.h
